Add new task text

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </li>
 
                 </ul>
-                <h2 v-else class="mt-4">No tasks to do. Relax!</h2>
+                <h2 v-else class="mt-4">No tasks to do. You can play Skyrim now!</h2>
             </div>
 
         </div>
